defined height of sharing div to fix page shifting on load

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -113,6 +113,10 @@ html {
   }
 }
 
+.share-buttons {
+  height: 110px;
+}
+
 .share-button {
   display: inline-block;
   text-align: right;
